Issue #20: Ensure search icon aligns with search text input field

--- a/css/ck5style.css
+++ b/css/ck5style.css
@@ -14771,6 +14771,9 @@ a > .ck-content code {
 .ck-content .block-bcbb-search form {
   display: grid;
   grid-template-columns: 1fr auto;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: end;
 }
 .ck-content .block-bcbb-search form .bcbb-input-wrapper:has(input[type=hidden]) {
   display: none;
